@@ -1,3 +1,11 @@
+2011-12-09  Hendrik Tews  <tews@os.inf.tu-dresden.de>
+
+	* using column in evar window
+	* new color for partially instantiated evar's
+	* new config file version 03
+	* use colors in evar window
+	* update configuration in evar window
+
 2011-12-08  Hendrik Tews  <tews@os.inf.tu-dresden.de>
 
 	* fix -w Ae warnings
